gcc/

2009-02-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39188
	* varasm.c (assemble_variable): Don't check DECL_NAME when
	globalizing a variable.

gcc/cp/

2009-02-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39188
	* cp-tree.h (maybe_commonize_var): New.

	* decl.c (maybe_commonize_var): Make it extern.

	* decl2.c (finish_anon_union): Call maybe_commonize_var.

gcc/testsuite/

2009-02-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39188
	* g++.dg/abi/pr39188-1a.C: New.
	* g++.dg/abi/pr39188-1b.C: Likewise.
	* g++.dg/abi/pr39188-1.h: Likewise.
	* g++.dg/abi/pr39188-2a.C: Likewise.
	* g++.dg/abi/pr39188-2b.C: Likewise.
	* g++.dg/abi/pr39188-2.h: Likewise.
	* g++.dg/abi/pr39188-3a.C: Likewise.
	* g++.dg/abi/pr39188-3b.C: Likewise.
	* g++.dg/abi/pr39188-3.h: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144297 138bc75d-0d04-0410-961f-82ee72b054a4