gcc/testsuite/g++.dg/abi/pr39188-3.h
@@ -1,0 +1,11 @@
+static int
+f (int x)
+{
+  static union 
+    {
+      int i;
+    };
+  int j = i;
+  i = x;
+  return j;
+}
